// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Tooltip
  overlay="quality_profiles.built_in.description"
>
  <div
    className="badge badge-info"
  >
    quality_profiles.built_in
  </div>
</Tooltip>
`;

exports[`should render correctly 2`] = `
<div
  className="badge badge-info"
>
  quality_profiles.built_in
</div>
`;
